--- a/projekti ne grup/home.html
+++ b/projekti ne grup/home.html
@@ -16,7 +16,19 @@
         </ul>
     </div>
     
+<section class="contact-section">
+    <div class="contact-box">
+        <h2>Get in Touch</h2>
+        <div class="line"></div>
+        <p><strong>Address:</strong> 1000, Prishtina, Kosovo</p>
+        <p><strong>Phone:</strong> +383 8888-888</p>
+        <p><strong>Email:</strong> contact@autoKosova.com</p>
+    </div>
+</section>
 
+<footer>
+    <p>&copy; 2025 - autoKosova. All rights reserved.</p>
+</footer>
 <script src="home.js"></script>
 </body>
 </html>
