--- a/projekti ne grup/sign.html
+++ b/projekti ne grup/sign.html
@@ -47,6 +47,15 @@
 </section>
 
 <footer>
+    <section class="contact-section">
+    <div class="contact-box">
+        <h2>Get in Touch</h2>
+        <div class="line"></div>
+        <p><strong>Address:</strong> 1000, Prishtina, Kosovo</p>
+        <p><strong>Phone:</strong> +383 8888-888</p>
+        <p><strong>Email:</strong> contact@autoKosova.com</p>
+    </div>
+</section>
     <p>&copy; 2025 - autoKosova. All rights reserved.</p>
 </footer>
 <script src="sing.js"></script>
